--- a/public/css/app.css
+++ b/public/css/app.css
@@ -13,6 +13,30 @@ h1, h2, h3, h4, h5, h6 {
     margin: 0 0 0.5em 0;
 }
 
+table {
+    width: 100%;
+    border: solid 1px black;
+    border-spacing: 0;
+    border-collapse: collapse;
+}
+
+thead {
+    border-bottom: solid 1px black;
+}
+
+tr:nth-child(even) {
+    background-color: #f2f2f2;
+}
+
+th {
+    text-align: left;
+    padding: 0.5em;
+}
+
+td {
+    padding: 0.5em;
+}
+
 .wrapper {
     box-shadow: 0 0 100px rgba(0,0,0,0.05);
     height: 100%;
