--- a/public/css/app.css
+++ b/public/css/app.css
@@ -51,6 +51,11 @@ button {
     overflow: auto;
 }
 
+.pagination {
+    text-align: right;
+    padding: 1em;
+}
+
 @media screen and (min-width: 980px) {
     .wrapper {
         width: 70%;
